--- a/.env
+++ b/.env
@@ -10,5 +10,6 @@ NEO4J_PROD_DB='purchases'
 NEO4J_TEST_DB='purchasesTest'
 NEO4J_USER='neo4j'
 NEO4J_PASSWORD='secret'
+ATLAS_CONNECTION='mongodb+srv://176maarten:QJiTgcbJ7jFP9d7@samenetencluster.7ho31.mongodb.net/myFirstDatabase?retryWrites=true'
 
 PORT=3000
