--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=prod node server.js",
+    "dev": "NODE_ENV=dev nodemon --exec node server.js",
+    "test": "NODE_ENV=test mocha \"./**/*spec.js\" --reporter min"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-autopopulate": "^0.16.0",
     "mongoose-unique-validator": "^3.0.0",
     "neo4j-driver": "^4.2.1",
     "nodemon": "^1.18.5",
