--- a/.env
+++ b/.env
@@ -1,15 +1,14 @@
 # this file should really NOT be in a git repo
 # as the config stored here should not be public
 # it's in here for you to use as example
-
 MONGO_URL='mongodb://localhost:27017'
 MONGO_PROD_DB='SamenEten'
-MONGO_TEST_DB='SamenEtentest'
+MONGO_TEST_DB='SamenEtenTest'
 NEO4J_URL='neo4j://localhost'
-NEO4J_PROD_DB='purchases'
-NEO4J_TEST_DB='purchasesTest'
+NEO4J_PROD_DB='sameneten'
+NEO4J_TEST_DB='SamenEtenTest'
 NEO4J_USER='neo4j'
-NEO4J_PASSWORD='secret'
+NEO4J_PASSWORD='eten'
 ATLAS_CONNECTION='mongodb+srv://176maarten:QJiTgcbJ7jFP9d7@samenetencluster.7ho31.mongodb.net/myFirstDatabase?retryWrites=true'
-
+JWT_SECRET='secret'
 PORT=3000
