--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start": "NODE_ENV=prod node server.js",
     "dev": "NODE_ENV=dev nodemon --exec node server.js",
-    "test": "NODE_ENV=test mocha \"./**/*spec.js\" --reporter min"
+    "test": "NODE_ENV=prod mocha --watch \"./**/*spec.js\" --recursive --reporter min"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "chai-as-promised": "^7.1.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^5.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -25,5 +28,10 @@
     "neo4j-driver": "^4.2.1",
     "nodemon": "^1.18.5",
     "tracer": "^1.1.4"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^5.2.0"
   }
 }
