--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-# this file should really NOT be in a git repo
-# as the config stored here should not be public
-# it's in here for you to use as example
 MONGO_URL='mongodb://localhost:27017'
 MONGO_PROD_DB='SamenEten'
 MONGO_TEST_DB='SamenEtenTest'
@@ -10,5 +7,8 @@ NEO4J_TEST_DB='SamenEtenTest'
 NEO4J_USER='neo4j'
 NEO4J_PASSWORD='eten'
 ATLAS_CONNECTION='mongodb+srv://176maarten:QJiTgcbJ7jFP9d7@samenetencluster.7ho31.mongodb.net/myFirstDatabase?retryWrites=true'
+NEO4J_CONNECTION ='neo4j+s://d6c82fb3.databases.neo4j.io'
+NEO4J_CONNECTION_USER ='neo4j'
+NEO4J_CONNECTION_PASSWORD ='xE5tLwp58SApVQ7kd-pfYY75J3MC-0FfVoA-8Pyqv3A'
 JWT_SECRET='secret'
 PORT=3000
